renamed one of the card skin

--- a/static/style.css
+++ b/static/style.css
@@ -66,8 +66,8 @@ input {
 	background-image: url("/static/img/day.jpg");
 }
 
-.evening-morning {
-	background-image: url("/static/img/evening-morning.jpg");
+.dusk {
+	background-image: url("/static/img/dusk.jpg");
 }
 
 .wrapper {
